# dreamforge

./: AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
docs/: post-ship-v0.4.0-checklist.md
docs/reports/: v0.2.0-ship-2026-06-17.md  v0.3.0-ship-2026-06-18.md  v0.4.0-ship-2026-06-19.md  v0.5.0-ship-2026-06-21.md  v0.6.0-ship-2026-06-21.md  v0.6.x-pr54-ship-2026-06-26.md
scripts/: dream-cli-verify.sh  dreamx-e2e-output-check.mjs  gui-verify-fixture.sh  migrate-tolaria-identifiers.mjs
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  menu.rs  settings.rs  telemetry.rs  vault_list.rs
src-tauri/src/commands/: ai_provider.rs  dreamvault.rs  git.rs  mod.rs  system.rs
src-tauri/src/commands/vault/: lifecycle_cmds.rs
src-tauri/src/git/: mod.rs
src-tauri/src/vault/: getting_started.rs  mod.rs
src/components/: AiAgentsOnboardingPrompt.test.tsx  AiAgentsOnboardingPrompt.tsx  AiProviderSettings.test.tsx  AiProviderSettings.tsx  AiWorkspaceFloatingButton.tsx  AiWorkspaceWindowApp.tsx  AppAiWorkspaceSurface.tsx  ClaudeCodeOnboardingPrompt.tsx  CloneVaultModal.tsx  CommandPalette.test.tsx  CommandPalette.tsx  CommitDialog.test.tsx  CommitDialog.tsx  DataSettingsSection.test.tsx  DataSettingsSection.tsx  DreamCliPathField.tsx  DreamPanel.test.tsx  DreamPanel.tsx  Editor.css  Editor.test.tsx  Editor.tsx  EditorTheme.css  FeedbackDialog.tsx  FilePreview.test.tsx  FilePreview.tsx  LinuxMenuButton.test.tsx  LlmSettingsField.test.tsx  LlmSettingsField.tsx  NoteItem.tsx  NoteList.rendering.test.tsx  PrivacySettingsSection.test.tsx  PrivacySettingsSection.tsx  RenameDetectedBanner.tsx  SettingsPanel.tsx  (+27 more)
(+129 files in other folders)
